static/css/application.css
/* ... */
  @media print {
    .quire-cover__overlay {
      display: none; } }

.quire-cover__hero {
  background-color: #3273dc;
  background-image: linear-gradient(90deg, #3273dc, #dc52f5);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  min-height: calc(100vh - 3rem);
  text-align: left;
  display: flex;
  align-items: center; }
  @media print {
    .quire-cover__hero {
      text-align: right;
      background-color: inherit;
      background-image: inherit;
      margin-top: 2.5in;
      margin-left: .75in;
      margin-right: .75in; } }
  .quire-cover__hero .half-title {
    display: none; }
    @media print {
      .quire-cover__hero .half-title {
        display: block;
        page-break-after: always;
        color: #3273dc;
        text-transform: uppercase;
        letter-spacing: 1pt;
        font-family: Lato, Helvetica, sans-serif; } }
  .quire-cover__hero .title {
    font-family: Lato, Helvetica, sans-serif;
    font-size: calc(3.75rem * 1);
    font-weight: 300;
    line-height: 1.07;
    margin-bottom: calc(1.5rem * 1);
    color: #fff; }
    @media print {
      .quire-cover__hero .title {
        font-size: 40pt;
        margin-top: 0;
        margin-bottom: .5in;
        color: #fff;
        page-break-before: right; } }
  .quire-cover__hero .subtitle {
    display: block;
    margin-top: calc(1.5rem * 1);
    font-size: calc(2.92rem * 1);
    font-weight: 300;
    line-height: 1.02;
    color: #fff; }
    @media print {
      .quire-cover__hero .subtitle {
        font-size: 32pt;
        margin-top: .25in;
        color: #fff; } }
  .quire-cover__hero .reading-line {
    font-family: Lato, Helvetica, sans-serif;
    font-style: italic;
    font-size: calc(1.25rem * 1);
    line-height: 1.2;
    color: #363636; }
    @media print {
      .quire-cover__hero .reading-line {
        font-size: 18pt;
        color: #3273dc; } }
  .quire-cover__hero .contributor {
    font-family: Lato, Helvetica, sans-serif;
    font-size: calc(1.25rem * 1);
    line-height: 1.72;
    margin-top: calc(2rem * 1);
    color: #fff; }
    @media print {
      .quire-cover__hero .contributor {
        font-size: 18pt;
        color: #fff; } }

.quire-cover__button {
  background-color: #3273dc;
  color: #fff;
  border-width: 0px;
  border-radius: 6px;
  font-family: Lato, Helvetica, sans-serif;
  font-style: italic; }
  .quire-cover__button svg {
    width: 1.25rem;
    height: 1.25rem;
    margin-left: 1rem;
    fill: #fff; }

.quire-cover__button:hover {
  background-color: #2466d1; }

@media screen and (min-width: 1028px) {
  .quire-cover .quire-page__content .container.is-fluid {
    max-width: 900px;
    width: 900px;
    margin: 0 auto; } }

@media print {
  .quire-cover .quire-page__content .container.is-fluid {
    display: none; } }

.quire-cover .quire-cover-footer {
  background-color: #f5f5f5; }
  .quire-cover .quire-cover-footer .columns {
    margin-left: -.5em;
    margin-right: -.5em; }
  .quire-cover .quire-cover-footer .column {
    padding: 0 0 .75rem 0; }
  .quire-cover .quire-cover-footer .column:nth-child(1) {
    padding-right: 16px; }
  .quire-cover .quire-cover-footer * {
    color: #363636; }
  .quire-cover .quire-cover-footer svg {
    fill: #363636; }
  .quire-cover .quire-cover-footer a,
  .quire-cover .quire-cover-footer button,
  .quire-cover .quire-cover-footer .button {
    background-color: #f5f5f5;
    color: #363636 !important; }
    .quire-cover .quire-cover-footer a:hover, .quire-cover .quire-cover-footer a:focus,
    .quire-cover .quire-cover-footer button:hover,
    .quire-cover .quire-cover-footer button:focus,
    .quire-cover .quire-cover-footer .button:hover,
    .quire-cover .quire-cover-footer .button:focus {
      background-color: #e8e8e8;
      color: #363636; }
  .quire-cover .quire-cover-footer a {
    border-bottom-color: #363636 !important; }
  .quire-cover .quire-cover-footer .menu-list {
    display: flex;
    flex-wrap: wrap;
    margin-top: .5em; }
    .quire-cover .quire-cover-footer .menu-list li + li {
      margin-top: 0; }
    .quire-cover .quire-cover-footer .menu-list a {
      padding: .5em; }
    @media print {
      .quire-cover .quire-cover-footer .menu-list {
        display: none; } }
  .quire-cover .quire-cover-footer .quire-copyright {
    padding: 0 .5em; }
    @media print {
      .quire-cover .quire-cover-footer .quire-copyright {
        display: none; } }
  .quire-cover .quire-cover-footer a.quire-copyright__icon__link:hover {
    background-color: transparent; }
  .quire-cover .quire-cover-footer .quire-publisher {
    margin-bottom: 1.5em;
    font-family: Lato, Helvetica, sans-serif; }
    .quire-cover .quire-cover-footer .quire-publisher img {
      float: right;
      max-height: 6em;
      margin: 0 0 1.5em 1.5em; }
      @media screen and (max-width: 100px) {
        .quire-cover .quire-cover-footer .quire-publisher img {
          float: none; } }
      @media print {
        .quire-cover .quire-cover-footer .quire-publisher img {
          height: .5in; } }
    .quire-cover .quire-cover-footer .quire-publisher p {
      text-align: right;
      clear: both;
      margin-bottom: 0;
      display: none; }
      @media print {
        .quire-cover .quire-cover-footer .quire-publisher p {
          display: inherit; } }
    .quire-cover .quire-cover-footer .quire-publisher p:first-of-type {
      text-transform: uppercase;
      letter-spacing: 1pt; }
    @media print {
      .quire-cover .quire-cover-footer .quire-publisher {
        margin-left: 1.5em;
        float: right; } }
  @media print {
    .quire-cover .quire-cover-footer {
      margin-top: .75in;
      margin-left: .75in;
      margin-right: .75in;
      background-color: inherit;
      position: fixed;
      top: 7.25in;
      left: 0;
      right: 0; } }

.quire-contents-list .list-header {
  padding: .5em .75em;
  text-transform: uppercase;
  letter-spacing: 1px; }
/* ... */

